example-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: exo
  name: demo-exo
