example-app/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exo
  name: exo
  namespace: demo-exo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exo
