example-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: exo
  name: exo
  namespace: demo-exo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: exo
    weight: 100
